update tour schedule